feat(movimiento): agregar nueva columna comentario
